# glusterfs

./: configure.ac
xlators/mgmt/glusterd/: Makefile.am
xlators/mgmt/glusterd/plugins/: Makefile.am
xlators/mgmt/glusterd/plugins/snapshot/src/: Makefile.am  lvm-snapshot.c  lvm-snapshot.h  lvm_snaps.c  zfs.c  zfs.h
xlators/mgmt/glusterd/src/: Makefile.am  glusterd-handshake.c  glusterd-snapshot-utils.c  glusterd-snapshot-utils.h  glusterd-snapshot.c  glusterd-store.c  glusterd-utils.h
